--- a/index.html
+++ b/index.html
@@ -4,100 +4,98 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Validação de Visita – Nichele Tintas</title>
+
 <style>
 html, body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
   height: 100%;
-  width: 100%;
   overflow-x: hidden;
 }
 
-/* --- TELA INICIAL --- */
+/* ================= PRIMEIRA TELA ================= */
 #intro {
   position: fixed;
   inset: 0;
+  background: linear-gradient(180deg, #6a1b9a, #9c27b0, #ffca28);
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(180deg, #6a1b9a, #9c27b0, #ffca28);
-  transition: opacity 1.5s ease, filter 1.5s ease;
+  transition: opacity 2.2s ease, filter 2.2s ease;
   z-index: 10;
 }
 
 #intro.fade-out {
   opacity: 0;
-  filter: blur(14px);
+  filter: blur(18px);
   pointer-events: none;
 }
 
 #intro button {
   font-size: 16px;
-  padding: 12px 28px;
+  padding: 12px 26px;
+  max-width: 220px;
+  width: auto;
   background: #6a1b9a;
   color: #fff;
   border: none;
-  border-radius: 12px;
+  border-radius: 14px;
   cursor: pointer;
-  max-width: 220px;
-  width: 70%;
-  text-align: center;
-  transition: background 0.3s;
 }
-#intro button:hover { background: #4a148c; }
 
-/* --- SEGUNDA TELA --- */
+/* ================= SEGUNDA TELA ================= */
 #formulario {
-  opacity: 0;             
-  pointer-events: none;   
+  opacity: 0;
+  pointer-events: none;
   min-height: 100vh;
   width: 100%;
-  background-image: url("fundonicheletintas.png"); 
-  background-size: cover;
-  background-position: center top;
+
+  background-image: url("fundonicheletintas.png");
   background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 105%; /* 🔹 imagem um pouco menor */
 
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding-top: 80px; 
-  box-sizing: border-box;
-  transition: opacity 1.5s ease;
+
+  padding-top: 90px; /* espaço da logo */
+  padding-bottom: 60px;
+
+  transition: opacity 2.2s ease;
 }
 
 #formulario.ativo {
   opacity: 1;
-  pointer-events: auto;  
+  pointer-events: auto;
 }
 
-/* --- CARD --- */
+/* ================= CARD ================= */
 .card {
   background: #fff;
-  max-width: 320px;
-  width: 85%;
-  padding: 40px 25px;
-  border-radius: 20px;
-  box-shadow: 0 15px 40px rgba(0,0,0,0.25);
-  text-align: left;
+  width: 78%;              /* 🔹 mais espaço nas laterais */
+  max-width: 300px;
+  padding: 38px 26px 40px;
+  border-radius: 22px;
+  box-shadow: 0 18px 45px rgba(0,0,0,0.28);
 
-  /* animação de entrada */
-  transform: translateY(100px);
+  transform: translateY(140px);
   opacity: 0;
-  transition: transform 1.2s ease, opacity 1.2s ease;
+  transition: transform 1.8s ease, opacity 1.8s ease;
 }
 
 .card h2 {
   text-align: center;
-  margin-bottom: 20px;
   color: #6a1b9a;
+  margin-bottom: 18px;
 }
 
-/* Campos do questionário */
+/* ================= FORM ================= */
 label {
   font-weight: bold;
-  margin-top: 14px;
   display: block;
+  margin-top: 14px;
 }
 
 input, select, textarea, button {
@@ -110,9 +108,7 @@ input, select, textarea, button {
   box-sizing: border-box;
 }
 
-textarea {
-  resize: vertical;
-}
+textarea { resize: vertical; }
 
 button {
   background: #6a1b9a;
@@ -121,16 +117,15 @@ button {
   margin-top: 16px;
   font-weight: bold;
   cursor: pointer;
-  transition: background 0.3s;
 }
-button:hover { background: #4a148c; }
 
+/* ================= PROGRESSO ================= */
 .progress {
   height: 4px;
   background: #e0e0e0;
   border-radius: 4px;
   overflow: hidden;
-  margin-bottom: 16px;
+  margin-bottom: 18px;
 }
 
 .progress span {
@@ -142,19 +137,15 @@ button:hover { background: #4a148c; }
 }
 
 #localizacao {
-  font-size: 14px;
+  font-size: 13px;
   margin-top: 6px;
-}
-
-#preview {
-  max-width: 100%;
-  margin-top: 10px;
 }
 </style>
 </head>
+
 <body>
 
-<!-- TELA INICIAL -->
+<!-- PRIMEIRA TELA -->
 <div id="intro">
   <button onclick="mostrarFormulario()">Acessar Questionário</button>
 </div>
@@ -163,7 +154,10 @@ button:hover { background: #4a148c; }
 <div id="formulario">
   <div class="card" id="card">
     <h2>Visitas Externas</h2>
-    <div class="progress"><span id="progressBar"></span></div>
+
+    <div class="progress">
+      <span id="progressBar"></span>
+    </div>
 
     <label>Vendedor</label>
     <input id="vendedor">
@@ -216,61 +210,53 @@ let latitude, longitude, endereco = "", fotoBase64 = null;
 
 const API_URL = "https://script.google.com/macros/s/AKfycbw3kM0KukrHTN_c0K0fQQXJAKFxBFVd4EmOyuopHBsmrac9agIgrBZvWxzUnIdo_xzG9w/exec";
 
-// Barra de progresso simples
+/* progresso */
 const campos = ["vendedor","codigoVendedor","loja","tipoCliente","statusVisita","observacoes"];
-campos.forEach(id => document.getElementById(id).addEventListener("input", atualizarProgresso));
+campos.forEach(id =>
+  document.getElementById(id).addEventListener("input", atualizarProgresso)
+);
+
 function atualizarProgresso() {
-  const p = campos.filter(id => document.getElementById(id).value).length;
-  progressBar.style.width = (p / campos.length) * 100 + "%";
+  const preenchidos = campos.filter(id => document.getElementById(id).value).length;
+  progressBar.style.width = (preenchidos / campos.length) * 100 + "%";
 }
 
-// --- TRANSIÇÃO ---
+/* transição */
 function mostrarFormulario() {
-  const intro = document.getElementById("intro");
-  const form = document.getElementById("formulario");
-  const card = document.getElementById("card");
-
-  // Desaparece a primeira tela
   intro.classList.add("fade-out");
+  formulario.classList.add("ativo");
 
-  // Ativa a segunda tela
-  form.classList.add("ativo");
-
-  // Card sobe de baixo para cima
   setTimeout(() => {
     card.style.transform = "translateY(0)";
     card.style.opacity = "1";
-  }, 50);
+  }, 120);
 }
 
-// --- LOCALIZAÇÃO ---
+/* localização */
 function capturarLocalizacao() {
   navigator.geolocation.getCurrentPosition(async pos => {
     latitude = pos.coords.latitude;
     longitude = pos.coords.longitude;
 
-    const res = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`);
-    const data = await res.json();
-    endereco = data.display_name || "";
+    const r = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`);
+    const d = await r.json();
+    endereco = d.display_name || "";
 
     btnLoc.textContent = "Localização capturada ✅";
     btnLoc.style.background = "#2e7d32";
     localizacao.innerText = endereco;
-  }, () => alert("Erro ao capturar localização"));
+  });
 }
 
-// --- CÂMERA ---
-document.getElementById("camera").addEventListener("change", e => {
-  const reader = new FileReader();
-  reader.onload = () => fotoBase64 = reader.result;
-  reader.readAsDataURL(e.target.files[0]);
+/* câmera */
+camera.addEventListener("change", e => {
+  const r = new FileReader();
+  r.onload = () => fotoBase64 = r.result;
+  r.readAsDataURL(e.target.files[0]);
 });
 
-// --- ENVIO ---
+/* envio */
 function enviar() {
-  btnEnviar.textContent = "Enviando...";
-  btnEnviar.disabled = true;
-
   fetch(API_URL, {
     method: "POST",
     body: JSON.stringify({
@@ -285,27 +271,11 @@ function enviar() {
       endereco: endereco,
       fotoBase64: fotoBase64
     })
-  })
-  .then(r => r.json())
-  .then(() => {
-    card.innerHTML = `
-      <div style="text-align:center">
-        <div style="font-size:56px;color:#2e7d32">✅</div>
-        <h2>Visita registrada</h2>
-        <p>Dados enviados com sucesso</p>
-        <button onclick="window.close()">Finalizar</button>
-      </div>
-    `;
-  })
-  .catch(() => {
-    btnEnviar.textContent = "Erro ao enviar";
-    btnEnviar.disabled = false;
   });
 }
 
-// --- ABRIR CÂMERA ---
 function abrirCamera() {
-  document.getElementById("camera").click();
+  camera.click();
 }
 </script>
 
