--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ html, body {
   min-height: 100vh;
   width: 100%;
 
+  /* 🔹 FUNDO COM CAPA NOVA */
   background-image:
-    url("topo.png"),
-    url("baixo.png");
+    url("capa.png");
 
   background-repeat:
     no-repeat,
