--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ html, body {
 
   /* 🔹 FUNDO COM CAPA NOVA */
   background-image:
-    url("capa.png");
+    url("capa.png"),
+    url("baixo.png");
 
   background-repeat:
     no-repeat,
