--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@ html, body {
 #intro {
   position: fixed;
   inset: 0;
-  background: linear-gradient(180deg, #6a1b9a, #9c27b0, #ffca28);
+  background-image: url("capa.png");
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: opacity 2.2s ease, filter 2.2s ease;
   z-index: 10;
+  transition: opacity 2.2s ease, filter 2.2s ease;
 }
 
 #intro.fade-out {
@@ -49,32 +51,26 @@ html, body {
   pointer-events: none;
   min-height: 100vh;
   width: 100%;
-
-  /* 🔹 FUNDO COM CAPA NOVA */
-  background-image:
-    url("capa.png"),
-    url("baixo.png");
-
-  background-repeat:
-    no-repeat,
-    repeat-y;
-
-  background-position:
-    center top,
-    center top;
-
-  background-size:
-    105% auto,
-    105% auto;
-
   display: flex;
   justify-content: center;
   align-items: flex-start;
-
   padding-top: 90px;
   padding-bottom: 60px;
-
   transition: opacity 2.2s ease;
+
+  /* 🔹 FUNDO COM topo + baixo */
+  background-image:
+    url("topo.png"),
+    url("baixo.png");
+  background-repeat:
+    no-repeat,
+    repeat-y;
+  background-position:
+    center top,
+    center top;
+  background-size:
+    105% auto,
+    105% auto;
 }
 
 #formulario.ativo {
@@ -90,7 +86,6 @@ html, body {
   padding: 38px 26px 40px;
   border-radius: 22px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.28);
-
   transform: translateY(140px);
   opacity: 0;
   transition: transform 1.8s ease, opacity 1.8s ease;
